# icu4c-builds

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  build.py  publish_release.py  pyproject.toml
.github/workflows/: main.yml
